--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,7 +11,6 @@
 }
 
 
-
 .wrapper {
     max-width: 350px;
     min-height: 500px;
@@ -20,6 +19,7 @@
     background-color: #ecf0f3;
     border-radius: 15px;
     box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+ 
 }
 
 .logo {
@@ -97,6 +97,11 @@
 
 @media(max-width: 380px) {
     .wrapper {
+
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
         margin: 60px 20px;
         padding: 40px 15px 15px 15px;
     }
