--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,108 +1,111 @@
-/* Importing fonts from Google */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
-/* Reseting */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    /* background-color: #ecf0f3; */
+.form-container{
+  
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    padding: 30px 20px 50px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
-
-.wrapper {
-    max-width: 350px;
-    min-height: 500px;
-    margin: 60px auto;
-    padding: 40px 30px 30px 30px;
-    background-color: #ecf0f3;
-    border-radius: 15px;
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
- 
+.login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);  
+}
+.form-bg{
+    background: linear-gradient(150deg,#1B394D 33%,#2D9DA7 4%,#2D9DA7 76%,#EC5F20 67%);
+}
+.login2{
+    display: flex;
+    justify-content: center;
 }
 
-.logo {
-    width: 80px;
-    margin: auto;
-}
-
-.logo img {
-    width: 100%;
-    height: 80px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0px 0px 3px #5f5f5f,
-        0px 0px 0px 5px #ecf0f3,
-        8px 8px 15px #a7aaa7,
-        -8px -8px 15px #fff;
-}
-
-.wrapper .name {
-    font-weight: 600;
-    font-size: 1.4rem;
-    letter-spacing: 1.3px;
-    padding-left: 10px;
-    color: #555;
-}
-
-.wrapper .form-field input {
-    width: 100%;
-    display: block;
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 1.2rem;
-    color: #666;
-    padding: 10px 15px 10px 10px;
-    /* border: 1px solid red; */
-}
-
-.wrapper .form-field {
-    padding-left: 10px;
-    margin-bottom: 20px;
-    border-radius: 20px;
-    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
-}
-
-.wrapper .form-field .fas {
-    color: #555;
-}
-
-.wrapper .btn {
-    box-shadow: none;
-    width: 100%;
-    height: 40px;
-    background-color: #03A9F4;
+.form-container .title{
     color: #fff;
-    border-radius: 25px;
-    box-shadow: 3px 3px 3px #b1b1b1,
-        -3px -3px 3px #fff;
-    letter-spacing: 1.3px;
+    font-size: 23px;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    margin: 0 0 60px;
+}
+.form-container .form-horizontal{
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
+.form-horizontal .form-icon{
+    color: #fff;
+    background-color: #1B394D;
+    font-size: 75px;
+    line-height: 92px;
+    height: 90px;
+    width: 90px;
+    margin: -65px auto 10px;
+    border-radius: 50%;
+}
+.form-horizontal .form-group{
+    margin: 0 0 10px;
+    position: relative;
+}
+.form-horizontal .form-group:nth-child(3){ margin-bottom: 30px; }
+.form-horizontal .form-group .input-icon{
+    color: #e7e7e7;
+    font-size: 23px;
+    position: absolute;
+    left: 0;
+    top: 10px;
+}
+.form-horizontal .form-control{
+    font-size: 16px;
+    font-weight: 600;
+    height: 50px;
+    padding: 10px 10px 10px 40px;
+    margin: 0 0 5px;
+    border: none;
+    border-bottom: 2px solid #e7e7e7;
+    border-radius: 0px;
+    box-shadow: none;
+}
+.form-horizontal .form-control:focus{
+    box-shadow: none;
+    border-bottom-color: #EC5F20;
+}
+.form-horizontal .form-control::placeholder{
+   
+    font-size: 16px;
+    font-weight: 600;
+}
+.form-horizontal .forgot{
+    font-size: 13px;
+    font-weight: 600;
+    text-align: right;
+    display: block;
+}
+.form-horizontal .forgot a{
+    color: #777;
+    transition: all 0.3s ease 0s;
+}
+.form-horizontal .forgot a:hover{
+    color: #777;
+    text-decoration:  underline;
+}
+.form-horizontal .signin{
+    color: #fff;
+    background-color: #EC5F20;
+    font-size: 17px;
+    text-transform: capitalize;
+    letter-spacing: 2px;
+    width: 100%;
+    padding: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    transition: all 0.4s ease 0s;
+}
+.form-horizontal .signin:hover,
+.form-horizontal .signin:focus{
+    font-weight: 600;
+    letter-spacing: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3) inset;
 }
 
-.wrapper .btn:hover {
-    background-color: #039BE5;
-}
-
-.wrapper a {
-    text-decoration: none;
-    font-size: 0.8rem;
-    color: #03A9F4;
-}
-
-.wrapper a:hover {
-    color: #039BE5;
-}
-
-@media(max-width: 380px) {
-    .wrapper {
-
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        margin: 60px 20px;
-        padding: 40px 15px 15px 15px;
-    }
-}
