--- a/src/css/ecrire.css
+++ b/src/css/ecrire.css
@@ -14,8 +14,14 @@
     max-width: 650px;
   }
 
-
+  .page-wrapper {
+    padding: 70px 0;
+  }
   
+  .carte{
+    background: linear-gradient(#d7d8da, #f1f1f5, #c6c6c7);
+  }
+
   .card {
     overflow: hidden;
     -webkit-border-radius: 3px;
@@ -31,7 +37,7 @@
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
   }
 
-  input{
+  .input{
     border: none;
     outline: none;
     margin-bottom: 30px;
@@ -41,7 +47,18 @@
     border-bottom: 2px solid #ccc;
  }
 
- form{
+.form{
     padding: 0 50px;
  }
+ @media (max-width: 768px) {
+    .card-img-top{
+        height: 150px;
+    }
+    .form{
+        padding: 0;
+    }
+    .page-wrapper {
+        padding: 50px 0;
+      }
+  }
   
