--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,6 +22,10 @@
     justify-content: center;
 }
 
+nav{
+    box-shadow: 1px 2px 3px rgb(56, 55, 55);
+}
+
 .form-container .title{
     color: #fff;
     font-size: 23px;
