--- a/src/css/ecrire.css
+++ b/src/css/ecrire.css
@@ -22,12 +22,28 @@
     background: linear-gradient(#d7d8da, #f1f1f5, #c6c6c7);
   }
 
+  .contain{
+    position: relative;
+    height: 100%;
+  }
+
+  .load{
+    background-color: rgba(0, 0, 0, 0.792);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+    top: 0;
+    z-index: 1;
+  }
+
   .card {
     overflow: hidden;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
     background: #fff;
+
   }
   
   .card-1 {
@@ -58,7 +74,10 @@
         padding: 0;
     }
     .page-wrapper {
-        padding: 10px 0;
+        padding: 10px auto;
+ 
       }
+
+    
   }
   
