--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,15 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body{
+ 
+    min-height: 100vh;
+}
+
+
 .form-container{
   
     font-family: 'Raleway', sans-serif;
